--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tt",
+  "name": "",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.1.1",
+    "@astrojs/rss": "^4.0.4",
+    "@astrojs/sitemap": "^3.0.5",
     "astro": "^4.3.0",
     "@astrojs/check": "^0.4.1",
     "typescript": "^5.3.3"
